terraform-07-ec2-subnet/main.tf
provider "aws" {
    region = "us-east-1"
}

data "aws_ami" "amazon_linux" {
    most_recent = true
    owners      = ["amazon"]
    filter {
        name   = "name"
        values = ["al2023-ami-2023*-x86_64"]
    }
}

resource "aws_vpc" "vpc_aula" {
    cidr_block = "10.10.0.0/16"
}

resource "aws_subnet" "publica" {
    vpc_id     = aws_vpc.vpc_aula.id
    cidr_block = "10.10.1.0/24"
}

resource "aws_security_group" "web" {
    name   = "terraform-web"
    vpc_id = aws_vpc.vpc_aula.id
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

resource "aws_instance" "servidor" {
    ami                    = data.aws_ami.amazon_linux.id
    instance_type          = "t2.micro"
    subnet_id              = aws_subnet.publica.id
    vpc_security_group_ids = [aws_security_group.web.id]
}
